Added commons-codec for Base64 encoding/decoding